--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,18 @@ body {
         transform: translateY(100vh) rotate(360deg);
     }
 }
+button {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    background: #34f534;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
 @media only screen and (max-width: 768px) {
     #tree {
         font-size: 16px;
